# Advanced-Programming-Techniques

./: CMakeLists.txt  MPI_FFT.cc  README.md  fft2d.cc  kernel.cu
src/: complex.cc  input_image.cc
